k8s/50_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name:  velero-api-ingress
# annotations:
#    kubernetes.io/ingress.class: nginx
# labels:
#   app.kubernetes.io/instance: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: api.velero.your-test-domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: velero-api-lb
            port:
              number: 80
